# zero-knowledge-vault

./: .env  .env.example  .gitattributes  .gitignore  .gitleaks.toml  .lighthouserc.js  .lintstagedrc.json  .prettierignore  ARCHITECTURE.md  AUDIT.md  AUDITING.md  CHANGELOG.md  CODE_OF_CONDUCT.md  COMPLETED.md  CONTRIBUTING.md  DEPLOYMENT.md  Dockerfile  LICENSE  LICENSES_AUDIT.md  PROGRESS.md  README.md  SECURITY.md  SECURITY_AUDIT.md  SECURITY_CHECKLIST.md  TRACKING-39.md  TRACKING-50.md  TRACKING-5K.md  TRACKING-FIX5.md  docker-compose.yml  eslint.config.mjs  next.config.ts  package.json  playwright.config.ts  prometheus.yml  semgrep.yml  sentry.client.config.ts  sentry.server.config.ts  tsconfig.json  tsconfig.tsbuildinfo  turbo.json  (+3 more)
.github/: PULL_REQUEST_TEMPLATE.md  codeql.yml  dependabot.yml
db/: custom.db
docs/: AI_AUDIT_PROMPT.md  API_REFERENCE.md  AUDIT_LOG_SYSTEM.md  BUNDLE_ANALYSIS.md  DEMO.md  FAQ.md  KEY_ROTATION.md  PERFORMANCE.md  SALES_CONTRACT.md  SECURITY_AUDIT_REPORT.md  TERMS_OF_SERVICE.md  WIKI.md  openapi.yaml
download/: DATOS_COMPLETOS_PROYECTO.txt  INFORME_VALORACION.txt  README-concatenador.md  README-concatenar-todo.md  README.md  cerrar-alertas-codeql.ps1  cerrar-alertas-codeql.sh  concatenar-todo.bat  concatenar-todo.ps1  concatenar-zk-vault.bat  concatenar-zk-vault.ps1  descargar-zk-vault.bat  descargar-zk-vault.ps1  ejemplo-zk-vault-codigo-completo.txt  zk-vault-codigo-completo.txt
platform/desktop/src-tauri/: Cargo.toml  tauri.conf.json
platform/desktop/src-tauri/src/: crypto.rs  keychain.rs  lib.rs  lock.rs
prisma/: seed.ts  (+1 more)
(+510 files in other folders)
