[package]
name = "zk-vault"
version = "0.1.0"
description = "Zero-Knowledge Vault Desktop App"
authors = ["ZK Vault Team"]
edition = "2021"

[lib]
name = "zk_vault_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-clipboard-manager = "2"
tauri-plugin-store = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
argon2 = "0.5"
aes-gcm = "0.10"
rand = "0.8"
